styles.css
body {
    margin: 40px 0;
    background-color: #1d1f21;
    color: #c5c8c6;
    font-family: 'Share Tech Mono', monospace;
}

p {
    background-color: #1d1f21;
    font-size: 18px;
    padding: 0 6px;
}

::-webkit-scrollbar-track {
    background-color: rgba(0, 0, 0, 0);
}

::-webkit-scrollbar {
    width: 6px;
    background-color: rgba(0, 0, 0, 0);
}

::-webkit-scrollbar-thumb {
    border-radius: 2px;
    background-color: #c5c8c6;
}

.title-group {
    padding: 40px 0 60px;
}

.title-group h1 {
    display: inline-block;
    font-size: 46px;
}

.title-group img {
    max-width: 140px;
    margin-top: -18px;
}

.wide {
    width: 100%;
}

.half {
    width: calc(50% - 8px);
    display: inline-block;
}

.outline {
    border: 2px solid #c5c8c6;
    border-radius: 10px;
    padding: 16px 20px 12px;
    position: relative;
    transition: border-color 180ms ease;
}

.half-tile {
    width: calc(50% - 12px);
    display: inline-block;
}

input[type="text"] {
    background-color: #1d1f21;
    border: none;
    border-bottom: 2px solid #c5c8c6;
    outline: none;
    transition: border-bottom-color 180ms ease;
    color: #c5c8c6;
    margin: 4px 0;
}

input[type="text"]:focus {
    border-bottom: 2px solid rgba(25, 136, 68, .6);
}

::placeholder {
    color: #969896;
}

.settings-container {
    margin: 0 12px 0 0;
}

.card-title {
    display: inline-block;
    position: absolute;
    top: -14px;
    left: 12px;
    margin-bottom: 0;
    transition: color 180ms ease;
    user-select: none;
    cursor: pointer;
    z-index: 5;
}

.card-title.right {
    left: unset;
    right: 12px;
}

.card-title.selected {
    color: rgba(25, 136, 68, .6);
}

.cmake-card {
    width: calc(50% - 5px);
    display: inline-block;
    float: right;
    margin-bottom: 80px;
    height: calc(100vh - 284px);
    position: relative;
}

.setting-cards {
    width: calc(50% - 5px);
    display: inline-block;
}

#result {
    word-break: break-word;
    cursor: pointer;
    position: absolute;
    overflow-y: scroll;
    width: 100%;
    height: calc(100% - 4px);
    padding: 18px 20px;
    top: 2px;
    left: 0;
    z-index: 1;
}

.green {
    color: rgba(25, 136, 68, .6);
}

.blue {
    color: rgba(57, 113, 237, .6);
}

.yellow {
    color: rgba(251, 169, 34, .6);
}

.option {
    width: 100%;
    background-color: #1d1f21;
    color: #c5c8c6;
    outline: none;
    border: none;
    text-align: left;
    margin: 2px 0;
    border-radius: 4px;
    user-select: none;
}

.option:hover, .option:focus {
    color: #c5c8c6;
    outline: none;
    background-color: rgba(25, 136, 68, .6);
    transition: all 180ms ease;
}

.option.active, option.selected.active {
    background-color: #1d1f21;
}

.option.selected {
    color: rgba(25, 136, 68, .6);
    background-color: #1d1f21;
}

.option.selected:hover, .option.selected:focus {
    color: rgba(57, 113, 237, .6);
    background-color: rgba(25, 136, 68, .6);
}

.loading-library {
    margin: 0 12px 24px 0;
    float: left;
}

.cpp {
    position: absolute;
    max-height: 32px;
    right: 20px;
    cursor: pointer;
    z-index: 10;
}

.gh-link {
    position: absolute;
    right: 65px;
    z-index: 10;
}

.gh-link img {
    max-height: 32px;
}

.tooltip {
    position: absolute;
    display: none;
    opacity: 1;
    top: 60px;
    text-align: center;
    background-color: #1d1f21;
    border-radius: 10px;
    padding: 14px;
    border: 2px solid #c5c8c6;
    font-family: 'Share Tech Mono', monospace;
}

#main-tooltip {
    right: -55px;
    max-width: 180px;
}

#gh-tooltip {
    right: 14px;
    max-width: 130px;
}

.toast {
    position: fixed;
    right: -300px;
    bottom: 20px;
    opacity: 1;
    max-width: 240px;
    text-align: center;
    background-color: #1d1f21;
    border-radius: 10px;
    padding: 14px;
    border: 2px solid #c5c8c6;
    font-family: 'Share Tech Mono', monospace;
}

@media screen and (max-width: 991px) {
    .cmake-card {
        width: 100%;
        margin: 24px 0 40px;
        float: none;
        height: auto;
    }

    .settings-container {
        margin: 0;
    }

    .setting-cards {
        width: 100%;
    }

    .title-group {
        text-align: center;
    }

    .title-group h1 {
        margin-top: 32px;
        display: block;
    }

    #main-tooltip {
        right: -14px;
    }

    #result {
        position: relative;
        padding: 0;
    }
}

@media screen and (max-width: 475px) {
    .half-tile {
        display: block;
        width: 100%;
    }

    .half-tile.math {
        margin-top: 24px;
    }

    .loading-library {
        margin: 0 0 24px;
    }

    #result {
        margin-top: 50px;
    }
}

.toggle {
    float: right;
    width: calc(50% + 5px);
    text-align: right;
}

.toggle button {
    width: calc(50% - 5px);
    background: #1d1f21;
    border: 2px solid #c5c8c6;
    border-radius: 10px;
    display: inline-block;
    color: #c5c8c6;
    outline: none;
    transition: all 180ms ease;
}

.toggle button:hover, .toggle button:focus {
    color: rgba(25, 136, 68, .6);
}

.toggle button.active {
    background: #c5c8c6;
    color: #1d1f21;
}

.toggle button:first-of-type {
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
}

.toggle button:last-of-type {
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
    margin-left: -10px;
}

